<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAA8A8"
    tools:context=".ui.Registro.RegistroActivity">

    <EditText
        android:id="@+id/dni"
        android:layout_width="192dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/ingrese_su_dni"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="187dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/ingrese_su_nombre"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dni" />

    <EditText
        android:id="@+id/apellido"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/ingrese_su_apellido"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#FBFBFB"
        android:ems="10"
        android:hint="@string/ingrese_su_mail"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/ingrese_su_clave"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="199dp"
        android:layout_height="50dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="159dp"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnFoto"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginTop="23dp"
        android:text="@string/tomar_foto"
        app:layout_constraintBottom_toTopOf="@+id/apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toEndOf="@+id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/foto"
        app:layout_constraintVertical_bias="0.134" />
</androidx.constraintlayout.widget.ConstraintLayout>